multiple new files added

--- a/new_facts.yaml
+++ b/new_facts.yaml
@@ -1,7 +1,7 @@
-[packages]
-web_package = httpd
-ftp_package = vsftpd
-
-[services]
-web_service = httpd
-ftp_service = vsftpd
+---
+- hosts: all
+  tasks:
+  - name: show IP address
+    debug:
+      msg: >
+        This host uses IP address {{ ansible_facts['default_ipv4']['address'] }}
